--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
 
         <activity android:name=".ActivityItemView">
         </activity>
+
+        <activity android:name=".ActivityImageView">
+        </activity>
     </application>
 
 </manifest>
